--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,7 +8,15 @@ h1{
   font-size: 50px;
   color: white;
 }
+h2{
+  font-weight: 300;
+  font-size: 42px;
+}
+h4{
+  font-size: 21px;
+  color: gray;
+}
 .link1{
-  color: aquamarine;
+  color: aqua;
   font-size: 16px;
 }
